// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should successfully create a zoom component with additional css classes 1`] = `
<button
  aria-label="zoom-in.title"
  class="chakra-button chakra-tooltip__trigger tool-button zoom zoom-in testClass1 testClass2 css-1qurmz4"
  data-part="trigger"
  data-scope="tooltip"
  data-state="closed"
  data-testid="zoom"
  dir="ltr"
  id="tooltip:«r2»:trigger"
  type="button"
>
  <svg
    fill="none"
    height="1em"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <line
      x1="12"
      x2="12"
      y1="5"
      y2="19"
    />
    <line
      x1="5"
      x2="19"
      y1="12"
      y2="12"
    />
  </svg>
</button>
`;

exports[`should successfully create a zoom-in and zoom-out buttons 1`] = `
<button
  aria-label="zoom-in.title"
  class="chakra-button chakra-tooltip__trigger tool-button zoom zoom-in css-1qurmz4"
  data-part="trigger"
  data-scope="tooltip"
  data-state="closed"
  data-testid="zoom-in"
  dir="ltr"
  id="tooltip:«r0»:trigger"
  type="button"
>
  <svg
    fill="none"
    height="1em"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <line
      x1="12"
      x2="12"
      y1="5"
      y2="19"
    />
    <line
      x1="5"
      x2="19"
      y1="12"
      y2="12"
    />
  </svg>
</button>
`;

exports[`should successfully create a zoom-in and zoom-out buttons 2`] = `
<button
  aria-label="zoom-out.title"
  class="chakra-button chakra-tooltip__trigger tool-button zoom zoom-out css-1qurmz4"
  data-part="trigger"
  data-scope="tooltip"
  data-state="closed"
  data-testid="zoom-out"
  dir="ltr"
  id="tooltip:«r1»:trigger"
  type="button"
>
  <svg
    fill="none"
    height="1em"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <line
      x1="5"
      x2="19"
      y1="12"
      y2="12"
    />
  </svg>
</button>
`;
